
2018-04-12  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): prevent SIGSEGV for
	  ANY LENGTH items in LINKAGE when program is first COBOL program
	* tree.c (cb_build_intrinsic): leave size of national literals to
	  runtime (as it is done for national items), note: we currently
	  still generate national literals as alphanumeric literals
	* parser.y, typeck.c (cb_build_const_length): allow non-numeric
	  literals to be used with LENGTH OF and prohibit use of numeric
	  literals as parameters for FUNCTION LENGTH/BYTE-LENGTH/LENGTH-AN
	* parser.y, field.c (cb_validate_78_item): fix issues with invalid
	  VALUE clauses

2018-04-09  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* tree.c (cb_field_size): report ANY LENGTH items as "unknown size",
	  fixing Bug #511

2018-04-04  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c: cosmetic change - label exit_program/exit_function
	  depending on program type

2018-04-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_translate): initialize cb_source_file with correct value
	* parser.y (end_scope_of_program_name), tree.h (cb_program): store end
	  of program/function definition in last_source_line
	* codegen.c (output_internal_function): output source location of program
	  / function end (to be set for fall-through end of its definition)
	* tree.c (cb_build_program): store start position of program definition
	* parser.y, typeck.c (cb_emit_call), tree.h: pass position of CALL in the
	  function call instead of a global variable
	* parser.y: store position of entry points with (backup_current_pos)

2018-04-02  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c (cb_register_list_get_first, cb_register_list_get_next),
	  typeck.c (cb_build_registers), tree.h: actually create register
	  definition, not only the name

2018-03-31  Edward Hart <edward.dan.hart@gmail.com>
